Feat : Ajout de endpoints API pour être 100% indépendant entre le Frontend (futur) et le Backend
